New Claims properties for 'Skapad Datum' 'Inskickad Datum' and 'Beslutsdatum'. Removed an old obsolete property

--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -301,6 +301,10 @@
     <Compile Include="Migrations\201804201539189_AddedDataAnnotationsToPropertiesInClaimDaysClass.Designer.cs">
       <DependentUpon>201804201539189_AddedDataAnnotationsToPropertiesInClaimDaysClass.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804261239512_AddedThreePropertiesAndDeletedOnePropertyInClaimClass.cs" />
+    <Compile Include="Migrations\201804261239512_AddedThreePropertiesAndDeletedOnePropertyInClaimClass.Designer.cs">
+      <DependentUpon>201804261239512_AddedThreePropertiesAndDeletedOnePropertyInClaimClass.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -601,6 +605,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201804201539189_AddedDataAnnotationsToPropertiesInClaimDaysClass.resx">
       <DependentUpon>201804201539189_AddedDataAnnotationsToPropertiesInClaimDaysClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804261239512_AddedThreePropertiesAndDeletedOnePropertyInClaimClass.resx">
+      <DependentUpon>201804261239512_AddedThreePropertiesAndDeletedOnePropertyInClaimClass.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
