--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -525,13 +525,15 @@
     <Content Include="Views\Claims\IndexPageAdmin.cshtml" />
     <Content Include="Views\Claims\ConfirmTransfer.cshtml" />
     <Content Include="Views\Account\DeleteOmbud.cshtml" />
+    <Content Include="Views\WatchLogs\Index.cshtml" />
+    <Content Include="Views\WatchLogs\DeleteAll.cshtml" />
+    <Content Include="Views\WatchLogs\Delete.cshtml" />
     <None Include="Web.CustomProfile1.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\WatchLogs\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
