--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -313,6 +313,10 @@
     <Compile Include="Migrations\201805060924072_AddedStringPropertiesForRobotInClaimsClass.Designer.cs">
       <DependentUpon>201805060924072_AddedStringPropertiesForRobotInClaimsClass.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805061132153_ReplacedTransferProperties.cs" />
+    <Compile Include="Migrations\201805061132153_ReplacedTransferProperties.Designer.cs">
+      <DependentUpon>201805061132153_ReplacedTransferProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -627,6 +631,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805060924072_AddedStringPropertiesForRobotInClaimsClass.resx">
       <DependentUpon>201805060924072_AddedStringPropertiesForRobotInClaimsClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805061132153_ReplacedTransferProperties.resx">
+      <DependentUpon>201805061132153_ReplacedTransferProperties.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
