Adjusted transfer string properties.

--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -317,6 +317,10 @@
     <Compile Include="Migrations\201805061132153_ReplacedTransferProperties.Designer.cs">
       <DependentUpon>201805061132153_ReplacedTransferProperties.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805061617154_AdjustedTransferStringProperties.cs" />
+    <Compile Include="Migrations\201805061617154_AdjustedTransferStringProperties.Designer.cs">
+      <DependentUpon>201805061617154_AdjustedTransferStringProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -634,6 +638,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805061132153_ReplacedTransferProperties.resx">
       <DependentUpon>201805061132153_ReplacedTransferProperties.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805061617154_AdjustedTransferStringProperties.resx">
+      <DependentUpon>201805061617154_AdjustedTransferStringProperties.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
