Adjusted transfer properties.

--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -321,6 +321,10 @@
     <Compile Include="Migrations\201805061617154_AdjustedTransferStringProperties.Designer.cs">
       <DependentUpon>201805061617154_AdjustedTransferStringProperties.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805061621367_AdjustedTransferProperties2.cs" />
+    <Compile Include="Migrations\201805061621367_AdjustedTransferProperties2.Designer.cs">
+      <DependentUpon>201805061621367_AdjustedTransferProperties2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -641,6 +645,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805061617154_AdjustedTransferStringProperties.resx">
       <DependentUpon>201805061617154_AdjustedTransferStringProperties.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805061621367_AdjustedTransferProperties2.resx">
+      <DependentUpon>201805061621367_AdjustedTransferProperties2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
