Added transfer properties in claim.cs

--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -325,6 +325,10 @@
     <Compile Include="Migrations\201805061621367_AdjustedTransferProperties2.Designer.cs">
       <DependentUpon>201805061621367_AdjustedTransferProperties2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805061913360_AdjustedTransferString3.cs" />
+    <Compile Include="Migrations\201805061913360_AdjustedTransferString3.Designer.cs">
+      <DependentUpon>201805061913360_AdjustedTransferString3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -648,6 +652,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805061621367_AdjustedTransferProperties2.resx">
       <DependentUpon>201805061621367_AdjustedTransferProperties2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805061913360_AdjustedTransferString3.resx">
+      <DependentUpon>201805061913360_AdjustedTransferString3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
