--- a/Sjuklöner/Web.config
+++ b/Sjuklöner/Web.config
@@ -98,7 +98,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <system.serviceModel>
+<!--  <system.serviceModel>
     <bindings>
       <customBinding>
         <binding name="RpServiceSoapBinding">
@@ -123,5 +123,5 @@
         </behavior>
       </endpointBehaviors>
     </behaviors>
-  </system.serviceModel>
+  </system.serviceModel>-->
 </configuration>
