--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -341,6 +341,10 @@
     <Compile Include="Migrations\201805151333457_RemovedSubAssistantSalarySpec.Designer.cs">
       <DependentUpon>201805151333457_RemovedSubAssistantSalarySpec.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805180928559_RemovedCustomerAddressFromClaim.cs" />
+    <Compile Include="Migrations\201805180928559_RemovedCustomerAddressFromClaim.Designer.cs">
+      <DependentUpon>201805180928559_RemovedCustomerAddressFromClaim.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -673,6 +677,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805151333457_RemovedSubAssistantSalarySpec.resx">
       <DependentUpon>201805151333457_RemovedSubAssistantSalarySpec.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805180925118_RemovedCustomerAddressFromClaim.cs.resx" />
+    <EmbeddedResource Include="Migrations\201805180928559_RemovedCustomerAddressFromClaim.resx">
+      <DependentUpon>201805180928559_RemovedCustomerAddressFromClaim.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
