--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -420,6 +420,18 @@
     <Compile Include="Migrations\201806180719186_AddedFirstAndLastClaimDayShortProperties.Designer.cs">
       <DependentUpon>201806180719186_AddedFirstAndLastClaimDayShortProperties.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806190928129_AddedSalaryBasePropertiesToClaimCalculationClass.cs" />
+    <Compile Include="Migrations\201806190928129_AddedSalaryBasePropertiesToClaimCalculationClass.Designer.cs">
+      <DependentUpon>201806190928129_AddedSalaryBasePropertiesToClaimCalculationClass.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806191448086_AddedReducedModelSumPropertyMissingDoctorsCertificateToClaim.cs" />
+    <Compile Include="Migrations\201806191448086_AddedReducedModelSumPropertyMissingDoctorsCertificateToClaim.Designer.cs">
+      <DependentUpon>201806191448086_AddedReducedModelSumPropertyMissingDoctorsCertificateToClaim.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806200623331_AddedMissingDoctorsCertificateProperty.cs" />
+    <Compile Include="Migrations\201806200623331_AddedMissingDoctorsCertificateProperty.Designer.cs">
+      <DependentUpon>201806200623331_AddedMissingDoctorsCertificateProperty.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -816,6 +828,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806180719186_AddedFirstAndLastClaimDayShortProperties.resx">
       <DependentUpon>201806180719186_AddedFirstAndLastClaimDayShortProperties.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806190928129_AddedSalaryBasePropertiesToClaimCalculationClass.resx">
+      <DependentUpon>201806190928129_AddedSalaryBasePropertiesToClaimCalculationClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806191448086_AddedReducedModelSumPropertyMissingDoctorsCertificateToClaim.resx">
+      <DependentUpon>201806191448086_AddedReducedModelSumPropertyMissingDoctorsCertificateToClaim.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806200623331_AddedMissingDoctorsCertificateProperty.resx">
+      <DependentUpon>201806200623331_AddedMissingDoctorsCertificateProperty.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
