Test sending mail at submission of claim.

--- a/Sjuklöner/Web.config
+++ b/Sjuklöner/Web.config
@@ -16,9 +16,13 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SMTPServer" value="smtp.gmail.com" />
-    <add key="mailAccount" value="ourrobotdem@gmail.com" />
+    <!--<add key="SMTPServer" value="smtp.gmail.com" />
+    <add key="mailAccount" value="ourrobotdemo@gmail.com" />
     <add key="mailPassword" value="DemoDagen" />
+    <add key="SMTPPort" value="587" />-->
+    <add key="SMTPServer" value="smtp-mail.outlook.com" />
+    <add key="mailAccount" value="robin@bitoreq.se" />
+    <add key="mailPassword" value="R0B0Tr0b1n" />
     <add key="SMTPPort" value="587" />
   </appSettings>
   <system.web>
