--- a/Sjuklöner/Web.CustomProfile1.config
+++ b/Sjuklöner/Web.CustomProfile1.config
@@ -15,10 +15,10 @@
     </connectionStrings>
   -->
   <appSettings>
-    <add key="SMTPServer" value="smtp.hbgstad.se" xdt:Transform="Replace" xdt:Locator="Match(key)"  />
-    <add key="mailAccount" value="HBGADM\SARobin" xdt:Transform="Replace" xdt:Locator="Match(key)"  />
-    <add key="mailPassword" value="B8xDvLzASPZo" xdt:Transform="Replace" xdt:Locator="Match(key)"  />
-    <add key="SMPTPPort" xdt:Transform="Replace" xdt:Locator="Match(key)"  />
+    <add key="SMTPServer" value="smtp.hbgstad.se" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"  />
+    <add key="mailAccount" value="HBGADM\SARobin" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"  />
+    <add key="mailPassword" value="B8xDvLzASPZo" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"  />
+    <add key="SMTPPort" value="25" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"  />
   </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
