Alterd config transformations

--- a/Sjuklöner/Web.config
+++ b/Sjuklöner/Web.config
@@ -11,18 +11,14 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Sjuklöner-20171211025241.mdf;Initial Catalog=aspnet-Sjuklöner-20171211025241;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings file="..\..\AppSettingsSecrets.config">
+  <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--<add key="SMTPServer" value="smtp.gmail.com" />
+    <add key="SMTPServer" value="smtp.gmail.com" />
     <add key="mailAccount" value="ourrobotdemo@gmail.com" />
     <add key="mailPassword" value="DemoDagen" />
-    <add key="SMTPPort" value="587" />-->
-    <add key="SMTPServer" value="smtp-mail.outlook.com" />
-    <add key="mailAccount" value="robin@bitoreq.se" />
-    <add key="mailPassword" value="R0B0Tr0b1n" />
     <add key="SMTPPort" value="587" />
   </appSettings>
   <system.web>
